# termichan

./: Cargo.toml  README.md
config/: default.toml
termichan/: Cargo.toml
termichan-config/: Cargo.toml
termichan-config/src/: config.rs  lib.rs
termichan-core/: Cargo.toml
termichan-executor/: Cargo.toml
termichan-llm/: Cargo.toml
termichan-llm/src/: lib.rs
termichan/src/: main.rs
